[package]
name = "deltalake-hdfs"
version = "1.0.0"
authors.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
deltalake-core = { version = "0.30.0", path = "../core"}
hdfs-native-object-store = { git = "https://github.com/logicalclocks/hopsfs-native-object-store.git" , branch = "1.1.0"}

# workspace dependencies
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
object_store = { workspace = true }
serial_test = "3"
deltalake-test = { path = "../test" }
walkdir = "2"

[features]
integration_test = ["hdfs-native-object-store/integration-test"]
